Archive2/98/be1303f2670c8b/output
main.cpp: In function 'void for_each(Tuple&&, F&&)':
main.cpp:16:79: error: cannot convert 'std::tuple_size<typename std::remove_reference<_From>::type>' to 'const size_t {aka const long unsigned int}' in initialization
     constexpr std::size_t N = std::tuple_size<std::remove_reference_t<Tuple>>{};
                                                                               ^
